@@ -1,5 +1,5 @@
 
-R Under development (unstable) (2012-03-26 r58836) -- "Unsuffered Consequences"
+R Under development (unstable) (2012-04-09 r58957) -- "Unsuffered Consequences"
 Copyright (C) 2012 The R Foundation for Statistical Computing
 ISBN 3-900051-07-0
 Platform: x86_64-unknown-linux-gnu (64-bit)
@@ -5880,10 +5880,12 @@ expression(bin <- bin + 1L)
 > # NULL == integer(0)
 > pmin(NULL, integer(0))
 integer(0)
-> pmin(integer(0), NULL)
+> pmax(integer(0), NULL)
 integer(0)
-> try(pmin(NULL, 1:3))
-Error in pmin(NULL, 1:3) : cannot mix 0-length vectors with others
+> pmin(NULL, 1:3)# now ok
+integer(0)
+> pmax(pi, NULL, 2:4)
+numeric(0)
 > 
 > x <- c(1, NA, NA, 4, 5)
 > y <- c(2, NA, 4, NA, 3)
@@ -6369,15 +6371,15 @@ function ()
 > print.function
 function (x, ...)  
  - attr(*, "srcref")=Class 'srcref'  atomic [1:8] 1 19 1 63 19 63 1 1
-  .. ..- attr(*, "srcfile")=Classes 'srcfilecopy', 'srcfile' <environment: 0x4ce7b18> 
+  .. ..- attr(*, "srcfile")=Classes 'srcfilecopy', 'srcfile' <environment: 0x394dff0> 
 > f
 function ()  
  - attr(*, "srcref")=Class 'srcref'  atomic [1:8] 1 17 1 28 17 28 1 1
-  .. ..- attr(*, "srcfile")=Classes 'srcfilecopy', 'srcfile' <environment: 0x4cd90a0> 
+  .. ..- attr(*, "srcfile")=Classes 'srcfilecopy', 'srcfile' <environment: 0x3961430> 
  - attr(*, "note")= chr "just a note"
  - attr(*, "yada")=function ()  
   ..- attr(*, "srcref")=Class 'srcref'  atomic [1:8] 2 24 2 48 24 48 2 2
-  .. .. ..- attr(*, "srcfile")=Classes 'srcfilecopy', 'srcfile' <environment: 0x4cd90a0> 
+  .. .. ..- attr(*, "srcfile")=Classes 'srcfilecopy', 'srcfile' <environment: 0x3961430> 
 > rm(print.function)
 > ## auto-printing and printing differed up to R 2.9.x
 > 
