@@ -17,7 +17,7 @@
       checked for writing off either end of the array on return from the
       compiled code.
 
-      This not intended for routine use, but can be very helpful in
+      This is not intended for routine use, but can be very helpful in
       finding segfaults in package code.
     }
 
@@ -82,6 +82,10 @@
 
       \item \code{norm()} now allows \code{type = "2"} (the "spectral"
       or 2-norm) as well, mainly for didactical completeness.
+
+      \item \code{pmin()} and \code{pmax(x,y,...)} now also work when one
+      of the inputs is of length zero and another is not, returning a
+      zero length vector, analogously to, say, \code{+}.
     }
   }
 
